# pdca-playground

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  REVIEW.md  pyproject.toml
.claude/agents/: planner.md
.claude/skills/pdca-init/: SKILL.md
.github/workflows/: ci.yml  pdca-act.yml
.pdca/: README.md  act.py  ci_report.py  guard.py  plan.yaml  state.json  state.schema.json
pdca_loop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: fizzbuzz.py  multiply.py
tests/: test_act.py  test_fizzbuzz.py  test_guard.py  test_multiply.py
